// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib.client.models.products should call GetLowestPricedOffersForASIN 1`] = `
Object {
  "asin": "1933890517",
  "identifier": Object {
    "asin": "1933890517",
    "itemCondition": "New",
    "marketplaceId": "ATVPDKIKX0DER",
    "sellerSku": null,
    "timeOfOfferChange": null,
  },
  "itemCondition": "New",
  "marketplaceId": "ATVPDKIKX0DER",
  "offers": Array [],
  "status": "NoBuyableOffers",
  "summary": Object {
    "buyBoxEligibleOffers": Array [],
    "buyBoxPrices": Array [],
    "listPrice": null,
    "lowestPrices": Array [],
    "numberOfOffers": Array [],
    "offersAvailableTime": null,
    "suggestedLowerPricePlusShipping": null,
    "totalOfferCount": 0,
  },
}
`;

exports[`lib.client.models.products should call GetLowestPricedOffersForSKU 1`] = `
Object {
  "identifier": Object {
    "asin": null,
    "itemCondition": "New",
    "marketplaceId": "ATVPDKIKX0DER",
    "sellerSku": "SKU2468",
    "timeOfOfferChange": null,
  },
  "itemCondition": "new",
  "marketplaceId": "ATVPDKIKX0DER",
  "offers": Array [],
  "sku": "SKU2468",
  "status": "NoOfferDueToMissingShippingCharge",
  "summary": Object {
    "buyBoxEligibleOffers": Array [],
    "buyBoxPrices": Array [],
    "listPrice": null,
    "lowestPrices": Array [],
    "numberOfOffers": Array [],
    "offersAvailableTime": null,
    "suggestedLowerPricePlusShipping": null,
    "totalOfferCount": 0,
  },
}
`;

exports[`lib.client.models.products should call GetMyPriceForASIN 1`] = `
Array [
  Object {
    "asin": "1933890517",
    "error": null,
    "product": Object {
      "attributes": null,
      "identifiers": Object {
        "marketplaceAsin": Object {
          "asin": "1933890517",
          "marketplaceId": "ATVPDKIKX0DER",
        },
        "skuIdentifier": null,
      },
      "offers": Array [
        Object {
          "buyingPrice": Object {
            "landedPrice": Object {
              "amount": 303.99,
              "currencyCode": "USD",
            },
            "listingPrice": Object {
              "amount": 300,
              "currencyCode": "USD",
            },
            "shipping": Object {
              "amount": 3.99,
              "currencyCode": "USD",
            },
          },
          "fulfillmentChannel": "MERCHANT",
          "itemCondition": "Used",
          "itemSubCondition": "Acceptable",
          "regularPrice": Object {
            "amount": 300,
            "currencyCode": "USD",
          },
          "sellerId": "A1IMEXAMPLEWRC",
          "sellerSku": "SKU2468",
        },
      ],
      "relationships": Object {
        "variationChildren": Array [],
        "variationParent": null,
      },
      "salesRankings": Array [],
    },
    "status": "Success",
  },
]
`;

exports[`lib.client.models.products should call GetMyPriceForSKU 1`] = `
Array [
  Object {
    "error": null,
    "product": Object {
      "attributes": null,
      "identifiers": Object {
        "marketplaceAsin": Object {
          "asin": "1933890517",
          "marketplaceId": "ATVPDKIKX0DER",
        },
        "skuIdentifier": Object {
          "marketplaceId": "ATVPDKIKX0DER",
          "sellerId": "A1IMEXAMPLEWRC",
          "sellerSKU": "SKU2468",
        },
      },
      "offers": Array [
        Object {
          "buyingPrice": Object {
            "landedPrice": Object {
              "amount": 303.99,
              "currencyCode": "USD",
            },
            "listingPrice": Object {
              "amount": 300,
              "currencyCode": "USD",
            },
            "shipping": Object {
              "amount": 3.99,
              "currencyCode": "USD",
            },
          },
          "fulfillmentChannel": "MERCHANT",
          "itemCondition": "Used",
          "itemSubCondition": "Acceptable",
          "regularPrice": Object {
            "amount": 300,
            "currencyCode": "USD",
          },
          "sellerId": "A1IMEXAMPLEWRC",
          "sellerSku": "SKU2468",
        },
      ],
      "relationships": Object {
        "variationChildren": Array [],
        "variationParent": null,
      },
      "salesRankings": Array [],
    },
    "sellerSku": "SKU2468",
    "status": "Success",
  },
]
`;

exports[`lib.client.models.products should call GetProductCategoriesForASIN 1`] = `
Object {
  "categories": Array [
    Object {
      "parent": Object {
        "parent": Object {
          "parent": Object {
            "parent": Object {
              "parent": Object {
                "parent": Object {
                  "parent": null,
                  "productCategoryId": "3375251",
                  "productCategoryName": "Categories",
                },
                "productCategoryId": "3375301",
                "productCategoryName": "Categories",
              },
              "productCategoryId": "2232464011",
              "productCategoryName": "Bikes & Scooters",
            },
            "productCategoryId": "3403201",
            "productCategoryName": "Bikes & Accessories",
          },
          "productCategoryId": "2371051011",
          "productCategoryName": "Clothing",
        },
        "productCategoryId": "2419332011",
        "productCategoryName": "Men",
      },
      "productCategoryId": "2420095011",
      "productCategoryName": "Compression Shorts",
    },
  ],
}
`;

exports[`lib.client.models.products should call GetProductCategoriesForSKU 1`] = `
Object {
  "categories": Array [
    Object {
      "parent": Object {
        "parent": Object {
          "parent": Object {
            "parent": Object {
              "parent": null,
              "productCategoryId": "283155",
              "productCategoryName": "Subjects",
            },
            "productCategoryId": "1000",
            "productCategoryName": "Subjects",
          },
          "productCategoryId": "3",
          "productCategoryName": "Business & Investing",
        },
        "productCategoryId": "2675",
        "productCategoryName": "Management & Leadership",
      },
      "productCategoryId": "271578011",
      "productCategoryName": "Project Management",
    },
    Object {
      "parent": Object {
        "parent": Object {
          "parent": Object {
            "parent": Object {
              "parent": null,
              "productCategoryId": "283155",
              "productCategoryName": "Specialty Boutique",
            },
            "productCategoryId": "2349030011",
            "productCategoryName": "Specialty Boutique",
          },
          "productCategoryId": "465600",
          "productCategoryName": "New, Used & Rental Textbooks",
        },
        "productCategoryId": "468220",
        "productCategoryName": "Business & Finance",
      },
      "productCategoryId": "684248011",
      "productCategoryName": "Management",
    },
  ],
}
`;

exports[`lib.client.models.products should call ListMatchingProducts 1`] = `
Object {
  "products": Array [
    Object {
      "attributes": Object {
        "authors": Array [
          "Rowling, J.K.",
        ],
        "binding": "Paperback",
        "brand": "Scholastic Press",
        "creators": Array [
          Object {
            "name": "GrandPrÃ©, Mary",
            "role": "Illustrator",
          },
        ],
        "edition": "1st",
        "features": Array [
          "Recommended Age: 9 years and up",
        ],
        "isAutographed": false,
        "isMemorabilia": false,
        "itemDimensions": Object {
          "height": Object {
            "unit": "inches",
            "value": 0.8,
          },
          "length": Object {
            "unit": "inches",
            "value": 7.5,
          },
          "weight": Object {
            "unit": "pounds",
            "value": 0.5,
          },
          "width": Object {
            "unit": "inches",
            "value": 5.2,
          },
        },
        "label": "Scholastic Paperbacks",
        "languages": Array [
          Object {
            "audioFormat": null,
            "name": "english",
            "type": "Unknown",
          },
          Object {
            "audioFormat": null,
            "name": "english",
            "type": "Original Language",
          },
          Object {
            "audioFormat": null,
            "name": "english",
            "type": "Published",
          },
        ],
        "listPrice": Object {
          "amount": 10.99,
          "currencyCode": "USD",
        },
        "manufacturer": "Scholastic Paperbacks",
        "numberOfItems": 1,
        "numberOfPages": 320,
        "packageDimensions": Object {
          "height": Object {
            "unit": "inches",
            "value": 1,
          },
          "length": Object {
            "unit": "inches",
            "value": 7.5,
          },
          "weight": Object {
            "unit": "pounds",
            "value": 0.5,
          },
          "width": Object {
            "unit": "inches",
            "value": 5.2,
          },
        },
        "packageQuantity": 1,
        "partNumber": "9780590353427",
        "productGroup": "Book",
        "productTypeName": "ABIS_BOOK",
        "publicationDate": 1999-10-01T00:00:00.000Z,
        "publisher": "Scholastic Paperbacks",
        "releaseDate": 1999-09-08T00:00:00.000Z,
        "smallImage": Object {
          "height": Object {
            "unit": "pixels",
            "value": 75,
          },
          "url": "http://ecx.images-amazon.com/images/I/51MU5VilKpL._SL75_.jpg",
          "width": Object {
            "unit": "pixels",
            "value": 51,
          },
        },
        "studio": "Scholastic Paperbacks",
        "title": "Harry Potter and the Sorcerer's Stone (Book 1)",
      },
      "identifiers": Object {
        "marketplaceAsin": Object {
          "asin": "059035342X",
          "marketplaceId": "ATVPDKIKX0DER",
        },
        "skuIdentifier": null,
      },
      "offers": Array [],
      "relationships": Object {
        "variationChildren": Array [],
        "variationParent": null,
      },
      "salesRankings": Array [
        Object {
          "productCategoryId": "book_display_on_website",
          "rank": 401,
        },
        Object {
          "productCategoryId": "15356791",
          "rank": 5,
        },
        Object {
          "productCategoryId": "3153",
          "rank": 8,
        },
        Object {
          "productCategoryId": "17468",
          "rank": 16,
        },
      ],
    },
  ],
}
`;

exports[`lib.client.models.products should handle GetLowestPricedOffersForASIN errors 1`] = `
Object {
  "error": Object {
    "asin": "1933890517",
    "code": "InvalidParameterValue",
    "detail": null,
    "itemCondition": "new",
    "marketplaceId": "ATVPDKIKX0DER",
    "message": "1933890517 is an invalid ASIN for marketplace ATVPDKIKX0DER",
    "status": "ClientError",
    "type": "Sender",
  },
  "responseMetadata": Object {
    "requestId": "bc6e4601-3d74-4612-adcf-EXAMPLEf1796",
  },
}
`;

exports[`lib.client.models.products should handle GetLowestPricedOffersForSKU errors 1`] = `
Object {
  "error": Object {
    "code": "InvalidParameterValue",
    "detail": null,
    "itemCondition": "new",
    "marketplaceId": "ATVPDKIKX0DER",
    "message": "SKU2468 is an invalid SKU for marketplace ATVPDKIKX0DER",
    "sku": "SKU2468",
    "status": "ClientError",
    "type": "Sender",
  },
  "responseMetadata": Object {
    "requestId": "bc6e4601-3d74-4612-adcf-EXAMPLEf1796",
  },
}
`;
